--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,116 @@
 @import "vars";
 @import "libs";
 @import "fonts";
+@import "global";
 
+.header{
+    position: relative;
+    height: 100vh;
+}
 
+.header__slider{
+    &-item{
+        height: 100vh;
+        background-image: url(../img/header-bg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+}
 
+.slider-item__info{
+    position: absolute;
+    right: 80px;
+    bottom: 116px;
+    text-align: right;
+    color: white;
+    text-transform: uppercase;
+}
+
+slider-item__info-suptitle{
+    margin-bottom: 5px;
+}
+
+slider-item__info-suptext{
+    margin-bottom: 8px;
+}
+
+.slider-item__info-title{
+    font-weight: 800;
+    font-size: 80px;
+    line-height: 86px;
+    margin-bottom: 48px;
+}
+
+.slider-item__info-text{
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 46px;
+    margin-bottom: 20px;
+}
+
+.slider-arrow{
+    position: absolute;
+    top: 40px;
+    right: 80px;
+    cursor: pointer;
+    z-index: 4;
+}
+
+.slider-arrow__left{
+    right: 125px;
+}
+
+.slider-dots{
+    position: absolute;
+    right: 50px;
+    bottom: 36px;
+    max-width: 920px;
+    width: 100%;
+    color: white;
+    .slick-current{
+        .dots-box{
+            border-top: 4px solid #4AF6CD;
+        }
+    }
+}
+
+.dots-box{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    height: 28px;
+    align-items: center;
+    border-top: 4px solid #fff;
+    padding-top: 6px;
+    &__number{
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 34px;
+    }
+    &__name{
+        font-weight: 300;
+        line-height: 19px;
+    }
+}
+
+.header__aside{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.header__aside-title{
+    font-weight: 800;
+    font-size: 200px;
+    line-height: 156px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    opacity: 0.07;
+    max-width: 467px;
+}
 
 
 @import "media";
