--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,13 @@ a {
   text-decoration: none;
 }
 
+ul,
+li{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .suptitle-left {
   font-size: 22px;
   line-height: 32px;
