--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -100,9 +100,12 @@ slider-item__info-suptext{
     top: 0;
     left: 0;
     z-index: 5;
+    border-right: 1px solid rgba($color: white, $alpha: 0.25);
+    height: 100vh;
+    text-align: center;
 }
 
-.header__aside-title{
+.header__title{
     font-weight: 800;
     font-size: 200px;
     line-height: 156px;
@@ -110,7 +113,28 @@ slider-item__info-suptext{
     color: #FFFFFF;
     opacity: 0.07;
     max-width: 467px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
 }
+
+.menu{
+        a{
+            color: white;
+            span{
+                display: block;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+                letter-spacing: 3px;
+                padding-top: 6px;
+                margin-bottom: 37px;
+            }
+        }
+    }
+
+
 
 
 @import "media";
