--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -103,6 +103,7 @@ slider-item__info-suptext{
     border-right: 1px solid rgba($color: white, $alpha: 0.25);
     height: 100vh;
     text-align: center;
+    color: white;
 }
 
 .header__title{
@@ -120,6 +121,7 @@ slider-item__info-suptext{
 }
 
 .menu{
+    padding-top: 40px;
         a{
             color: white;
             span{
@@ -129,10 +131,90 @@ slider-item__info-suptext{
                 line-height: 14px;
                 letter-spacing: 3px;
                 padding-top: 6px;
-                margin-bottom: 37px;
+                margin-bottom: 20px;
             }
         }
     }
+
+.header__date{
+    font-size: 72px;
+    line-height: 64px;
+    font-weight: 800;
+    span{
+        padding-top: 15px;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 1.4px;
+        margin-bottom: 30px;
+        display: block;
+    }
+}
+
+.header__search{
+    padding-top: 15px;
+    padding-bottom: 35px;
+}
+
+.header__location{
+    display: inline-block;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1.05px;
+    font-weight: 300;
+    position: relative;
+    padding-left: 19px;
+    &::before{
+        content: "";
+        position: absolute;
+        width: 11px;
+        height: 19px;
+        background-image: url(../img/marker.svg);
+        background-repeat: no-repeat;
+        left: 0;
+        top: 0;
+    }
+}
+
+.header__map{
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 3;
+}
+
+.header__arrows{
+    position: absolute;
+    left: 210px;
+    bottom: 30px;
+    z-index: 3px;
+}
+
+.line-animation{
+    stroke-dashoffset: 600;
+    stroke-dasharray: 600;
+    animation: animdash 10s infinite 6s;
+}
+
+@keyframes animdash {
+    to{
+        stroke-dashoffset: 0;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
