--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,8 +24,6 @@
     right: 80px;
     bottom: 116px;
     text-align: right;
-    color: white;
-    text-transform: uppercase;
 }
 
 slider-item__info-suptitle{
@@ -68,7 +66,6 @@ slider-item__info-suptext{
     bottom: 36px;
     max-width: 920px;
     width: 100%;
-    color: white;
     .slick-current{
         .dots-box{
             border-top: 4px solid #4AF6CD;
@@ -92,6 +89,7 @@ slider-item__info-suptext{
     &__name{
         font-weight: 300;
         line-height: 19px;
+        text-transform: capitalize;
     }
 }
 
@@ -103,15 +101,12 @@ slider-item__info-suptext{
     border-right: 1px solid rgba($color: white, $alpha: 0.25);
     height: 100vh;
     text-align: center;
-    color: white;
 }
 
 .header__title{
     font-weight: 800;
     font-size: 200px;
     line-height: 156px;
-    text-transform: uppercase;
-    color: #FFFFFF;
     opacity: 0.07;
     max-width: 467px;
     position: absolute;
@@ -123,7 +118,6 @@ slider-item__info-suptext{
 .menu{
     padding-top: 40px;
         a{
-            color: white;
             span{
                 display: block;
                 font-weight: 500;
@@ -132,6 +126,7 @@ slider-item__info-suptext{
                 letter-spacing: 3px;
                 padding-top: 6px;
                 margin-bottom: 20px;
+                text-transform: capitalize;
             }
         }
     }
@@ -164,6 +159,7 @@ slider-item__info-suptext{
     font-weight: 300;
     position: relative;
     padding-left: 19px;
+    text-transform: capitalize;
     &::before{
         content: "";
         position: absolute;
